chore(waybar): disable disk, cpu and memory modules;

--- a/wm/waybar/config
+++ b/wm/waybar/config
@@ -14,9 +14,9 @@
   "modules-right": [
     "tray",
     "idle_inhibitor",
-    "disk",
-    "cpu",
-    "memory",
+    // "disk",
+    // "cpu",
+    // "memory",
     "wireplumber",
     "backlight",
     "bluetooth",
@@ -48,7 +48,7 @@
   },
   "disk": {
     "interval": 300,
-    "format": "󰋊 {free:3}",
+    "format": "󰨣 {free}",
     "path": "/",
     "on-click": "alacritty -o font.size=12 -T 'LF Manager' -e lf"
   },
@@ -90,8 +90,8 @@
     }
   },
   "cpu": {
-    "interval": 3,
-    "format": " {usage:2}%",
+    "interval": 5,
+    "format": "󰻠 {usage}%",
     "states": {
       "warning": 70,
       "critical": 90
@@ -101,13 +101,13 @@
   "idle_inhibitor": {
     "format": "{icon}",
     "format-icons": {
-      "activated": " ",
-      "deactivated": " "
+      "activated": "󱫗",
+      "deactivated": "󱫖"
     }
   },
   "memory": {
-    "interval": 10,
-    "format": "󰍛 {percentage:2}%",
+    "interval": 5,
+    "format": "󰍛 {percentage}%",
     "states": {
       "warning": 70,
       "critical": 90
@@ -115,17 +115,17 @@
     "on-click": "alacritty -o font.size=11 -T 'Htop' -e htop"
   },
   "network": {
-    "interval": 10,
+    "interval": 30,
     "format-wifi": " ",
     "format-ethernet": "󰈀",
-    "format-disconnected": " ",
+    "format-disconnected": "",
     "tooltip-format-ethernet": "󰈀 {ifname}: {ipaddr}",
     "tooltip-format-wifi": " {essid} ({signalStrength}%)"
   },
   "bluetooth": {
-    "format": "",
-    "format-connected": " {device_alias}",
-    "format-connected-battery": " ",
+    "format": "󰂯",
+    "format-connected": "󰂯 {device_alias}",
+    "format-connected-battery": "󰂯",
     "tooltip-format": "{device_alias} {device_battery_percentage}%",
     "tooltip-format-connected": "{device_enumerate}",
     "tooltip-format-enumerate-connected": "{device_alias}\t{device_address}",
@@ -215,17 +215,18 @@
       "",
       "",
       "",
-      "",
-      "",
-      "",
-      "",
-      ""
+      "󰃚",
+      "󰃝",
+      "󰃞",
+      "󰃟",
+      "󰃠"
     ],
     "tooltip": true
   },
   "tray": {
     "icon-size": 14,
-    "spacing": 5
+    "spacing": 5,
+    "reverse-direction": false
   },
   "custom/logo": {}
 }
