chore(fontconfig): update font config;

--- a/utils/fontconfig/conf.d/01-generic.conf
+++ b/utils/fontconfig/conf.d/01-generic.conf
@@ -2,7 +2,7 @@
 <!DOCTYPE fontconfig SYSTEM "urn:fontconfig:fonts.dtd">
 <fontconfig>
 
-  <!-- rendering options -->
+  <!-- Rendering options -->
   <match target="font">
     <edit mode="assign" name="autohint">
       <bool>false</bool>
@@ -64,9 +64,22 @@
     </test>
     <edit name="family" mode="prepend" binding="strong">
       <string>JetBrains Mono</string>
+      <string>Noto Sans CJK SC</string>
       <string>Symbols Nerd Font</string>
       <string>Twemoji</string>
     </edit>
   </match>
+
+  <!-- Default Sans fonts-->
+  <match target="pattern">
+    <test name="family">
+      <string>Noto Sans</string>
+    </test>
+    <edit name="family" mode="prepend" binding="strong">
+      <string>Noto Sans</string>
+      <string>Noto Sans CJK SC</string>
+    </edit>
+  </match>
+
 
 </fontconfig>
