--- a/wm/hypr/hyprland.conf
+++ b/wm/hypr/hyprland.conf
@@ -11,12 +11,8 @@ monitor = eDP-1,2880x1800@90,auto,2
 monitor=,highrr,auto,1
 
 # Enviroment
-env = WOBSOCK, $XDG_RUNTIME_DIR/wob.sock
 env = GTK_THEME, WhiteSur-Dark
 env = XCURSOR_THEME, WhiteSur-cursors
-env = CLION_VM_OPTIONS, $HOME/dotfiles/utils/scripts/jetbra/vmoptions/clion.vmoptions
-# env = XCURSOR_SIZE, 24
-# XDG Specifications
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
@@ -34,23 +30,20 @@ exec-once = swayidle -w timeout 300 'swaylock -f' timeout 360 'hyprctl dispatch 
 exec-once = rm -f $WOBSOCK && mkfifo $WOBSOCK && tail -f $WOBSOCK | wob
 exec-once = $HOME/.scripts/gsettings.sh
 exec-once = $HOME/.config/hypr/xdg.sh
-exec = pkill fcitx5; env LANG=zh_CN.UTF-8 fcitx5 -d
+exec = pkill fcitx5; env LANG=zh_CN.UTF-8 fcitx5 -d --replace
 exec = pkill swaybg; swaybg -i $HOME/.config/hypr/wallpaper/WhiteSur.jpg -m fill
 exec = pkill waybar; waybar
 
 # AutoStartup APP
 exec-once = sleep 2; telegram-desktop; hyprctl dispatch closewindow org.telegram.desktop
-exec-once = sleep 2; $BROWSER
+exec-once = sleep 2; hyprctl dispatch exec [workspace 1] $BROWSER
 exec-once = sleep 2; hyprctl dispatch exec [workspace 2 silent] alacritty;
 
 # Hyprland Settings
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
     kb_layout = us
-    kb_variant =
-    kb_model =
     kb_options = caps:escape 
-    kb_rules =
 
     repeat_rate = 45
     repeat_delay = 500
@@ -71,20 +64,14 @@ general {
     gaps_in = 1
     gaps_out = 2
     border_size = 0
-    # resize_on_border = true
-
-    layout = dwindle
+    cursor_inactive_timeout = 5
 }
 
 decoration {
     rounding = 0
-    multisample_edges = true
     blur = false
-    blur_size = 2
     blur_new_optimizations = true
 }
-
-layerrule = blur, waybar
 
 animations {
     enabled = true
@@ -141,6 +128,7 @@ windowrulev2 = float,class:^(Element)$
 windowrulev2 = float,class:^(org.qbittorrent.qBittorrent)$
 windowrulev2 = float,class:^(org.wireshark.Wireshark)$
 windowrulev2 = float,class:^(com.github.wwmm.easyeffects)$
+windowrulev2 = float,class:^(org.kde.polkit-kde-authentication-agent-1)$
 windowrulev2 = float,class:^(mpv)$
 
 windowrulev2 = float,class:^(steamwebhelper)$,title:^(Steam)$
