--- a/wm/sway/config
+++ b/wm/sway/config
@@ -19,7 +19,7 @@ input "type:touchpad" {
     tap enabled
 }
 
-# hide mouse after 5 seconds inactivity
+# Hide mouse after 5 seconds inactivity
 seat * hide_cursor 5000
 
 ### General
@@ -55,12 +55,12 @@ exec rm -f $WOBSOCK && mkfifo $WOBSOCK && tail -f $WOBSOCK | wob
 exec $HOME/.config/hypr/gsettings.sh
 exec $HOME/.config/hypr/xdg.sh
 exec swaybg -i $HOME/.config/hypr/wallpaper/WhiteSur.png -m fill
-exec_always --no-startup-id env LANG=zh_CN.UTF-8 fcitx5 -d --replace
+exec_always --no-startup-id env LANG=zh_CN.UTF-8 LC_CTYPE=zh_CN.UTF-8 fcitx5 -d --replace
 
 # AutoStartup APP
 exec --no-startup-id "sleep 1; swaymsg 'workspace 2; exec alacritty; workspace back_and_forth'"
-exec --no-startup-id "sleep 1; swaymsg 'workspace 1; exec firefox-developer-edition; workspace back_and_forth'"
-exec --no-startup-id "sleep 2; swaymsg 'workspace 1; exec telegram-desktop; move scratchpad'"
+exec --no-startup-id "sleep 2; swaymsg 'workspace 1; exec firefox-developer-edition; workspace back_and_forth'"
+exec --no-startup-id "sleep 3; swaymsg 'workspace 1; exec telegram-desktop; move scratchpad'"
 
 
 ### Keybinds
@@ -71,7 +71,7 @@ bindgesture swipe:3:up move scratchpad
 bindgesture swipe:3:down scratchpad show
 
 # Exit Sway
-bindsym Ctrl+Alt+Backspace exec swaynag -t warning -m 'Do you really want to exit sway' -b 'Yes, exit sway' 'swaymsg exit'
+bindsym Ctrl+Alt+Backspace exec swaymsg exit
 
 bindsym $mod+B exec $BROWSER
 bindsym $mod+O exec obsidian
@@ -108,14 +108,30 @@ bindsym --locked XF86AudioPrev exec playerctl previous
 bindsym --locked Print exec grim - | wl-copy --type image/png
 
 floating_modifier $mod normal
+
 # Reload the configuration file
 bindsym $mod+Shift+R reload
 
 ### Windowrule
+
+# Floating Apps
+for_window [app_id="org.kde.polkit-kde-authentication-agent-1"] floating enable
+for_window [app_id="com.obsproject.Studio"] floating enable
+for_window [app_id="org.telegram.desktop"] floating enable
+for_window [app_id="org.qbittorrent.qBittorrent"] floating enable
+for_window [app_id="org.wireshark.Wireshark"] floating enable
+for_window [app_id="com.github.wwmm.easyeffects"] floating enable
+for_window [app_id="org.fcitx.fcitx5-config-qt"] flating enable
+for_window [app_id="Element"] floating enable
+for_window [app_id="anki"] floating enable
+for_window [app_id="mpv"] floating enable
+for_window [app_id="FLOAT"] floating enable
+
 # Inhibit Idle if a window is fullscreen
 for_window [class="^.*"] inhibit_idle fullscreen
 for_window [app_id="^.*"] inhibit_idle fullscreen
 
+# Special rules
 for_window [window_role = "pop-up"] floating enable
 for_window [window_role = "bubble"] floating enable
 for_window [window_role = "dialog"] floating enable
@@ -123,45 +139,34 @@ for_window [window_type = "dialog"] floating enable
 for_window [window_role = "task_dialog"] floating enable
 for_window [window_type = "menu"] floating enable
 
+# Blender
+for_window [class="Blender Preferences"] floating enable
+
+# Picture Viewer
 for_window [app_id="imv"] {
     floating enable
     move center
 }
 
+# Visaul Studio Code
 for_window [app_id="code" title=".*Folder.*"] {
     floating enable
 }
 
+# Telegram
 for_window [app_id="org.telegram.desktop" title="Media viewer"] {
     floating enable
     move center
     resize set [width] 40ppt [height] 40ppt
 }
 
-for_window [app_id="Alacritty"] {
-    border pixel 1
-}
-
-# Floating
-for_window [app_id="Alacritty" title="LF Manager"] floating enable
-for_window [app_id="Alacritty" title="Htop"] floating enable
-for_window [app_id="org.kde.polkit-kde-authentication-agent-1"] floating enable
-for_window [app_id="org.telegram.desktop"] floating enable
-for_window [app_id="org.qbittorrent.qBittorrent"] floating enable
-for_window [app_id="org.wireshark.Wireshark"] floating enable
-for_window [app_id="com.github.wwmm.easyeffects"] floating enable
-for_window [app_id="Element"] floating enable
-for_window [app_id="anki"] floating enable
-for_window [app_id="mpv"] floating enable
-for_window [app_id="FLOAT"] floating enable
-for_window [class="Blender Preferences"] floating enable
-
-# Steam
+# Steam & Gamescope
 # https://github.com/ValveSoftware/steam-for-linux/issues/1040
+for_window [app_id="gamescope" title="Steam"] floating enable
 for_window [class="^steam$" title="^Friends$"] floating enable
 for_window [class="^steam$" title="Steam - News"] floating enable
 for_window [class="^steam$" title=".* - Chat"] floating enable
-for_window [class="^steam$" title="^Settings$"] floating enable
+for_window [app_id="steam|gamescope" title="Steam Settings"] floating enable
 for_window [class="^steam$" title=".* - event started"] floating enable
 for_window [class="^steam$" title=".* CD key"] floating enable
 for_window [class="^steam$" title="^Steam - Self Updater$"] floating enable
@@ -171,10 +176,11 @@ for_window [title="^Steam Keyboard$"] floating enable
 
 # Firefox
 for_window [app_id="firefoxdeveloperedition" title="About Firefox Developer Edition"] floating enable
-for_window [app_id="firefoxdeveloperedition" title="Picture-in-Picture"] {
+for_window [app_id="firefoxdeveloperedition|firefox" title="Picture-in-Picture"] {
     floating enable
     resize set width 50 ppt
 }
+for_window [app_id="firefoxdeveloperedition|firefox" title="Library"] floating enable
 
 # Waybar Tooltips don't steel focus
 no_focus [app_id="waybar"]
