chore(mpv): add uosc plugin;

--- a/config/mpv/mpv.conf
+++ b/config/mpv/mpv.conf
@@ -29,18 +29,12 @@ dscale=mitchell
 # ===== OSD =====
 
 osc=no
-osd-bar-align-y=-1                      # progress bar y alignment (-1 top, 0 centered, 1 bottom)
-osd-bar-h=2                             # height of osd bar as a fractional percentage of your screen height
-osd-bar-w=99                            # width of " " "
-osd-border-color='#DD322640'            # ARGB format
-osd-border-size=2                       # size for osd text and progress bar
-osd-color='#FFFFFFFF'                   # ARGB format
-osd-duration=2000                       # hide the osd after x ms
-osd-font-size=32
-osd-font='mono'                        # sets a custom font (comment out line if font change is undesired)
-osd-status-msg='${time-pos} / ${duration}${?percent-pos:  (${percent-pos}%)}${?frame-drop-count:${!frame-drop-count==0:  Dropped: ${frame-drop-count}}}\n${?chapter:Chapter: ${chapter}}'
+border=no
+osd-bar=no
+osd-bold=yes
+osd-font-size=14
+osd-font='monospace'
 
-# ===== Seeking =====
 
 save-position-on-quit=yes               # saves the seekbar position on exit
 
@@ -108,7 +102,7 @@ load-stats-overlay=yes  # 统计信息，默认 yes
 ytdl=yes  # 网址解析增强，默认 yes
 ytdl-raw-options=yes-playlist=
 # mpv will by default pass "bestvideo+bestaudio/best", which selects h264 over vp9 because of its larger size
-ytdl-format=(bestvideo[height<=3840][vcodec=vp9]/bestvideo[height<=3840][vcodec~="^avc"]/bestvideo[height<=3840])+bestaudio
+# ytdl-format=(bestvideo[height<=3840][vcodec=vp9]/bestvideo[height<=3840][vcodec~="^avc"]/bestvideo[height<=3840])+bestaudio
 # use yt-dlp
 script-opts=ytdl_hook-ytdl_path=yt-dlp
 
