--- a/config/mpv/script-opts/ytdl_hook.conf
+++ b/config/mpv/script-opts/ytdl_hook.conf
@@ -2,7 +2,7 @@
 ###不允许选项和值之间存在多余的空格
 
 ##首选尝试用ytd解析（默认no）
-try_ytdl_first=no
+try_ytdl_first=yes
 
 ##解析地址黑名单，格式解释见 https://mpv.io/manual/master/#options-exclude
 ##推荐在 try_ytdl_first=yes 的情况下使用，可合理加速网络地址的解析
