feat: update some config;

--- a/config/mpv/mpv.conf
+++ b/config/mpv/mpv.conf
@@ -53,21 +53,19 @@ volume=70                               # default volume, 100 = unchanged
 # ===== Subtitles =====
 
 # Display English Subtitles if available
-#sub-ass-force-margins=yes
-#sub-ass-force-style=Kerning=yes        # allows you to override style parameters of ASS scripts
-#sub-auto=fuzzy                         # external subs don't have to match the file name exactly to autoload
-#sub-border-color="#FF262626"
-#sub-border-size=3.0
-#sub-color="#FFFFFFFF"
-#sub-shadow-color="#33000000"
-#sub-shadow-offset=1
-#sub-spacing=0.5
-#sub-use-margins=yes
-#alang=en,eng                            # default audio languages
+sub-ass-force-margins=yes
+sub-ass-force-style=Kerning=yes        # allows you to override style parameters of ASS scripts
+sub-auto=fuzzy                         # external subs don't have to match the file name exactly to autoload
+sub-border-color="#FF262626"
+sub-border-size=3.0
+sub-color="#FFFFFFFF"
+sub-shadow-color="#33000000"
+sub-shadow-offset=1
+sub-spacing=0.5
+sub-use-margins=yes
 embeddedfonts=yes                       # use embedded fonts for SSA/ASS subs
 #slang=en,eng                            # default subtitles languages
 sub-auto=all
-#sub-color='#eaea27'                     # use yellow sub color (remove this line to make subtitles the default white colour)
 sub-file-paths-append='Subs/${filename/no-ext}'      # search for external subs in these relative subdirectories
 sub-file-paths-append='Subs/${filename}'
 sub-file-paths-append='subs/${filename/no-ext}'
@@ -98,7 +96,7 @@ prefetch-playlist=yes                   # prefetches the playlist
 
 load-auto-profiles=auto # <yes|no|默认auto> 新版条件配置预设（使用旧版外挂的用户记得禁用）
 load-osd-console=yes  # 控制台，默认 yes
-load-stats-overlay=yes  # 统计信息，默认 yes
+load-stats-overlay=no  # 统计信息，默认 yes
 ytdl=yes  # 网址解析增强，默认 yes
 ytdl-raw-options=yes-playlist=
 # mpv will by default pass "bestvideo+bestaudio/best", which selects h264 over vp9 because of its larger size
