--- a/config/wob/wob.ini
+++ b/config/wob/wob.ini
@@ -3,7 +3,7 @@
 anchor = top
 
 
-background_color = #000000BB
-bar_color = #FFFFFF
+# background_color = #000000
+# bar_color = #FFFFFF
 
 ; vim: set ft=dosini:
