--- a/config/sway/config
+++ b/config/sway/config
@@ -51,9 +51,8 @@ xwayland disable
 ### AutoStartup
 exec systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec dbus-update-activation-environment --all
+exec dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY SWAYSOCK
 exec /usr/lib/polkit-kde-authentication-agent-1
-# exec xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL_OUTPUT_SCALE 2
-# exec xrdb ~/.Xresources
 exec wl-paste --type text --watch cliphist store #Stores only text data
 exec wl-paste --type image --watch cliphist store #Stores only image data
 exec wm-idle
@@ -64,7 +63,7 @@ exec rm -f $WOBSOCK && mkfifo $WOBSOCK && tail -f $WOBSOCK | wob
 exec_always --no-startup-id env LANG=zh_CN.UTF-8 LC_CTYPE=zh_CN.UTF-8 fcitx5 -d --replace
 
 # AutoStartup APP
-exec --no-startup-id $HOME/.config/sway/auto-start.sh
+exec --no-startup-id auto-start
 
 ### Keybinds
 # Gestures
@@ -74,11 +73,16 @@ bindgesture swipe:3:up move scratchpad
 bindgesture swipe:3:down scratchpad show
 
 # Keybinding
+# Use wev can get key name;
 # Exit Sway
-bindsym Ctrl+Alt+Backspace exec swaymsg exit
+bindsym Ctrl+Alt+Backspace exit
 
 bindsym $mod+P sticky toggle
 bindsym Alt+Tab focus next
+
+bindsym Ctrl+Shift+Escape exec kitty --title "System Monitor" -e htop
+bindsym Ctrl+Alt+Period exec kitty --title "System Monitor" -e htop
+bindsym $mod+E exec kitty --title "Explore" -e lf ~
 
 bindsym $mod+F floating toggle
 bindsym $mod+Shift+F fullscreen toggle
@@ -152,7 +156,7 @@ for_window [window_role = "task_dialog"] floating enable
 for_window [window_type = "menu"] floating enable
 
 # Floating Terminal
-for_window [app_id="Alacritty|kitty" title="Float Terminal"] {
+for_window [app_id="Alacritty|kitty" title="Float Terminal|System Monitor|Explore"] {
     floating enable
     resize set 70ppt 70ppt
 }
