chore(kitty): close kitty window no need to confirm any more;
Signed-off-by: iFlygo <iflygo@outlook.com>

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,6 +1,8 @@
 allow_remote_control yes
 listen_on            unix:@kitty
 
+confirm_os_window_close 0
+
 font_family      monospace
 font_size   13
 
