--- a/config/fontconfig/conf.d/03-bind.conf
+++ b/config/fontconfig/conf.d/03-bind.conf
@@ -11,4 +11,13 @@
     </edit>
 </match>
 
+<match target="pattern">
+    <test name="family">
+      <string>Microsoft Yahei</string>
+    </test>
+    <edit binding="strong" mode="prepend" name="family">
+      <string>sans-serif</string>
+    </edit>
+</match>
+
 </fontconfig>
