--- a/config/applications/ Tale of Immortal.desktop
+++ b/config/applications/ Tale of Immortal.desktop
@@ -1,8 +1,8 @@
 [Desktop Entry]
-Name=Steam Linux Runtime - Sniper
+Name=鬼谷八荒 Tale of Immortal
 Comment=Play this game on Steam
-Exec=steam steam://rungameid/1628350
-Icon=steam
+Exec=steam steam://rungameid/1468810
+Icon=steam_icon_1468810
 Terminal=false
 Type=Application
 Categories=Game;
