--- a/config/mpv/input.conf
+++ b/config/mpv/input.conf
@@ -18,12 +18,12 @@
  MBTN_LEFT_DBL        cycle fullscreen             # 切换 全屏状态 [左键-双击]
  MBTN_BACK            playlist-prev                # 切换到列表中的上个文件 [后退键]
  MBTN_FORWARD         playlist-next                # 切换到列表中的下个文件 [前进键]
-#MBTN_MID             ignore                       # 默认没给定义但是很多人用，要用建议清空下两条操作名（易误触）[中键（按压滚轮）]
+#MBTN_MID             ignore # 默认没给定义但是很多人用，要用建议清空下两条操作名（易误触）[中键（按压滚轮）]
 
- WHEEL_UP             seek -10                     # 后退10秒 [滚轮-向上]
- WHEEL_DOWN           seek  10                     # 前进10秒 [滚轮-向下]
-#WHEEL_LEFT           ignore                       # <无操作> [滚轮-向左]
-#WHEEL_RIGHT          ignore                       # <无操作> [滚轮-向右]
+ WHEEL_UP             add volume +1                     # 后退10秒 [滚轮-向上]
+ WHEEL_DOWN           add volume -1                   # 前进10秒 [滚轮-向下]
+#WHEEL_LEFT           ignore # <无操作> [滚轮-向左]
+#WHEEL_RIGHT          ignore # <无操作> [滚轮-向右]
 
 ##⇘⇘键盘
 
@@ -66,8 +66,8 @@
  Ctrl+v               cycle video                  # 切换视频轨
  SPACE                cycle pause                  # 切换 暂停/播放状态 [空格键]
  Ctrl+Alt+SPACE       stop                         # 停止
- T                    cycle ontop                  # 切换 置顶状态
- t                    set ontop yes                # 进入置顶状态
+ T                    cycle on top                  # 切换 置顶状态
+ t                    set on top yes                # 进入置顶状态
  f                    cycle fullscreen             # 切换 全屏状态
  ENTER                set fullscreen yes           # 进入全屏状态 [回车键]
  ESC                  set fullscreen no            # 退出全屏状态
