--- a/config/mpv/mpv.conf
+++ b/config/mpv/mpv.conf
@@ -4,88 +4,87 @@
 
 # ===== Terminal =====
 
-cursor-autohide=200                     # autohides the cursor after 200ms
-cursor-autohide-fs-only=yes             # don't autohide the cursor in window mode, only fullscreen
-msg-color=yes                           # color log messages on terminal
-msg-module=yes                          # prepend module name to log messages
-term-osd-bar=yes                        # displays a progress bar on the terminal
+cursor-autohide         = 200                     # autohides the cursor after 200ms
+cursor-autohide-fs-only = yes             # don't autohide the cursor in window mode, only fullscreen
+msg-color               = yes                           # color log messages on terminal
+msg-module              = yes                          # prepend module name to log messages
+term-osd-bar            = yes                        # displays a progress bar on the terminal
 
 # ===== Video =====
-profile=gpu-hq
-gpu-context=auto
-gpu-api=vulkan
-autofit-larger=75%x75% 
-hwdec=auto-copy
-hwdec-codecs=all
-vo=gpu-next # <gpu|gpu-next>
-vd-lavc-dr=auto # <默认auto|yes|no> 是否直接解码到显存，个别低端英特尔处理器可能需要显式禁用此功能以大幅提速解码
-vf=format:dolbyvision=yes
-icc-profile-auto
 
-scale=nearest
-dscale=mitchell
+autofit-larger = 75%x75%
+dscale         = mitchell
+gpu-api        = vulkan
+gpu-context    = auto
+hwdec          = auto-copy
+hwdec-codecs   = all
+profile        = gpu-hq
+scale          = nearest
+vd-lavc-dr     = auto # <默认auto|yes|no> 是否直接解码到显存，个别低端英特尔处理器可能需要显式禁用此功能以大幅提速解码
+vf             = format:dolbyvision=yes
+vo             = gpu-next # <gpu|gpu-next>
 
 
 # ===== OSD =====
 
-osc=no
-border=no
-osd-bar=no
-osd-bold=yes
-osd-font-size=14
-osd-font='monospace'
+osc                   = no
+border                = no
+osd-bar               = no
+osd-bold              = yes
+osd-font-size         = 14
+osd-font              = 'monospace'
 
-
-save-position-on-quit=yes               # saves the seekbar position on exit
+save-position-on-quit = yes               # saves the seekbar position on exit
 
 # ===== RAM =====
 
-cache=yes                               # uses a large seekable RAM cache even for local input.
-cache-secs=1024                          # uses extra large RAM cache (needs cache=yes to make it useful).
-demuxer-max-back-bytes=200M              # sets fast seeking
-demuxer-max-bytes=1024M                   # sets fast seeking
+cache                  = yes                               # uses a large seekable RAM cache even for local input.
+cache-secs             = 1024                          # uses extra large RAM cache (needs cache=yes to make it useful).
+demuxer-max-back-bytes = 200M              # sets fast seeking
+demuxer-max-bytes      = 1024M                   # sets fast seeking
 
 # ===== Audio =====
 
-volume-max=100                          # maximum volume in %, everything above 100 results in amplification
-volume=70                               # default volume, 100 = unchanged
+volume-max = 100                          # maximum volume in %, everything above 100 results in amplification
+volume     = 70                               # default volume, 100 = unchanged
 
 # ===== Subtitles =====
 
 # Display English Subtitles if available
-sub-ass-force-margins=yes
-sub-ass-force-style=Kerning=yes        # allows you to override style parameters of ASS scripts
-sub-auto=fuzzy                         # external subs don't have to match the file name exactly to autoload
-sub-border-color="#FF262626"
-sub-border-size=3.0
-sub-color="#FFFFFFFF"
-sub-shadow-color="#33000000"
-sub-shadow-offset=1
-sub-spacing=0.5
-sub-use-margins=yes
-embeddedfonts=yes                       # use embedded fonts for SSA/ASS subs
-#slang=en,eng                            # default subtitles languages
-sub-auto=all
-sub-file-paths-append='Subs/${filename/no-ext}'      # search for external subs in these relative subdirectories
-sub-file-paths-append='Subs/${filename}'
-sub-file-paths-append='subs/${filename/no-ext}'
-sub-file-paths-append='subs/${filename}'
-sub-file-paths-append=ASS
-sub-file-paths-append=Ass
-sub-file-paths-append=SRT
-sub-file-paths-append=Srt
-sub-file-paths-append=Sub
-sub-file-paths-append=Subs
-sub-file-paths-append=Subtitles
-sub-file-paths-append=ass
-sub-file-paths-append=srt
-sub-file-paths-append=sub
-sub-file-paths-append=subs
-sub-file-paths-append=subtitles
-sub-fix-timing=no                       # do not try to fix gaps (which might make it worse in some cases)
-sub-font-size=45
-#sub-font="noto"
-sub-scale-with-window=yes
+
+sub-ass-force-margins = yes
+sub-ass-force-style   = Kerning=yes        # allows you to override style parameters of ASS scripts
+sub-auto              = fuzzy                         # external subs don't have to match the file name exactly to autoload
+sub-border-color      = "#FF262626"
+sub-border-size       = 3.0
+sub-color             = "#FFFFFFFF"
+sub-shadow-color      = "#33000000"
+sub-shadow-offset     = 1
+sub-spacing           = 0.5
+sub-use-margins       = yes
+embeddedfonts         = yes                       # use embedded fonts for SSA/ASS subs
+#slang                = en,eng                            # default subtitles languages
+sub-auto              = all
+sub-file-paths-append = 'Subs/${filename/no-ext}'      # search for external subs in these relative subdirectories
+sub-file-paths-append = 'Subs/${filename}'
+sub-file-paths-append = 'subs/${filename/no-ext}'
+sub-file-paths-append = 'subs/${filename}'
+sub-file-paths-append = ASS
+sub-file-paths-append = Ass
+sub-file-paths-append = SRT
+sub-file-paths-append = Srt
+sub-file-paths-append = Sub
+sub-file-paths-append = Subs
+sub-file-paths-append = Subtitles
+sub-file-paths-append = ass
+sub-file-paths-append = srt
+sub-file-paths-append = sub
+sub-file-paths-append = subs
+sub-file-paths-append = subtitles
+sub-fix-timing        = no                       # do not try to fix gaps (which might make it worse in some cases)
+sub-font-size         = 45
+#sub-font             = "noto"
+sub-scale-with-window = yes
 
 force-seekable=yes                      # forces videos to be seekable
 hls-bitrate=max                         # uses max quality for HLS streams
@@ -94,21 +93,22 @@ prefetch-playlist=yes                   # prefetches the playlist
 
 # ===== Others =====
 
-load-auto-profiles=auto # <yes|no|默认auto> 新版条件配置预设（使用旧版外挂的用户记得禁用）
-load-osd-console=yes  # 控制台，默认 yes
-load-stats-overlay=no  # 统计信息，默认 yes
-ytdl=yes  # 网址解析增强，默认 yes
-ytdl-raw-options=yes-playlist=
+load-auto-profiles = auto # <yes|no|默认auto> 新版条件配置预设（使用旧版外挂的用户记得禁用）
+load-osd-console   = yes  # 控制台，默认 yes
+load-stats-overlay = no  # 统计信息，默认 yes
+ytdl               = yes  # 网址解析增强，默认 yes
+ytdl-raw-options   = yes-playlist=
 # mpv will by default pass "bestvideo+bestaudio/best", which selects h264 over vp9 because of its larger size
-# ytdl-format=(bestvideo[height<=3840][vcodec=vp9]/bestvideo[height<=3840][vcodec~="^avc"]/bestvideo[height<=3840])+bestaudio
+# ytdl-format      = (bestvideo[height<=3840][vcodec=vp9]/bestvideo[height<=3840][vcodec~="^avc"]/bestvideo[height<=3840])+bestaudio
 # use yt-dlp
-script-opts=ytdl_hook-ytdl_path=yt-dlp
+script-opts        = ytdl_hook-ytdl_path=yt-dlp
 
 load-scripts=yes       # 自动挂载 /scripts/ 目录中的所有外置脚本，默认 yes。设置为no时可用下一行示例的命令加载指定的外置脚本
 
 [bilibili]
-profile-desc = Bilibili videos
-profile-cond = path:match("https://www.bilibili.com")~=nil
-profile-restore = copy
-referrer = https://www.bilibili.com/
+
+profile-desc       = Bilibili videos
+profile-cond       = path:match("https://www.bilibili.com")~=nil
+profile-restore    = copy
+referrer           = https://www.bilibili.com/
 # ytdl-raw-options = cookies-from-browser=firefox::Bilibili
