chore(dotbot): update install.conf.yaml;
Signed-off-by: iFlygo <iflygo@outlook.com>

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -6,51 +6,50 @@
 - clean: ["~", "~/.config"]
 
 - link:
-    ~/.config/nvim/autoload: config/nvim/autoload
-    ~/.config/nvim/doc: config/nvim/doc
-    ~/.config/nvim/lua/user: config/nvim/lua/user
-    ~/.config/nvim/plugin: config/nvim/plugin
-    ~/.config/nvim/templates: config/nvim/templates
-    ~/.config/vim: vim
-    ~/.config/fcitx5: config/fcitx5
-    ~/.config/user-dirs.dirs: utils/user-dirs.dirs
-    ~/.config/fish: config/fish
-    ~/.config/fontconfig: utils/fontconfig
-    ~/.config/translate-shell: config/translate-shell
-    ~/.config/libinput-gestures.conf: utils/libinput-gestures.conf
-    ~/.bashrc: utils/.bashrc
-    ~/.gitconfig: utils/.gitconfig
-    ~/.config/chrome-flags.conf: utils/chrome-flags.conf
-    ~/.config/code-flags.conf: utils/code-flags.conf
-    ~/.config/electron-flags.conf: utils/electron-flags.conf
-    ~/.Xresources: utils/.Xresources
-    ~/.tmux.conf: utils/.tmux.conf
-    ~/.tmux.conf.local: utils/.tmux.conf.local
-    ~/.tokyonight.tmux: utils/.tokyonight.tmux
-    ~/.config/alacritty: config/alacritty
-    ~/.config/kitty: config/kitty
-    ~/.config/gtk-3.0: config/gtk-3.0
-    ~/.config/hypr: config/hypr
-    ~/.config/imv: config/imv
-    ~/.config/lf: config/lf
-    ~/.config/mako: config/mako
-    ~/.config/sway: config/sway
-    ~/.config/mpv: config/mpv
-    ~/.config/ranger: config/ranger
-    ~/.config/rofi: config/rofi
-    ~/.config/swaylock: config/swaylock
-    ~/.config/tofi: config/tofi
-    ~/.config/waybar: config/waybar
-    ~/.config/wlogout: config/wlogout
-    ~/.config/wob: config/wob
-    ~/.config/wofi: config/wofi
-    ~/.config/htop: config/htop
-    ~/.config/wayfire.ini: config/wayfire.ini
-    ~/.config/mimeapps.list: config/mimeapps.list
-    ~/.local/bin: utils/scripts
-    ~/.mozilla/firefox/profile/chrome: mozilla/profile/chrome
+    ~/.Xresources:                      utils/.Xresources
+    ~/.bashrc:                          utils/.bashrc
+    ~/.config/alacritty:                config/alacritty
+    ~/.config/chrome-flags.conf:        utils/chrome-flags.conf
+    ~/.config/code-flags.conf:          utils/code-flags.conf
+    ~/.config/electron-flags.conf:      utils/electron-flags.conf
+    ~/.config/fcitx5:                   config/fcitx5
+    ~/.config/fish:                     config/fish
+    ~/.config/fontconfig:               config/fontconfig
+    ~/.config/gtk-3.0:                  config/gtk-3.0
+    ~/.config/htop:                     config/htop
+    ~/.config/hypr:                     config/hypr
+    ~/.config/imv:                      config/imv
+    ~/.config/kitty:                    config/kitty
+    ~/.config/lf:                       config/lf
+    ~/.config/libinput-gestures.conf:   utils/libinput-gestures.conf
+    ~/.config/mako:                     config/mako
+    ~/.config/mimeapps.list:            config/mimeapps.list
+    ~/.config/mpv:                      config/mpv
+    ~/.config/nvim/autoload:            config/nvim/autoload
+    ~/.config/nvim/doc:                 config/nvim/doc
+    ~/.config/nvim/lua/user:            config/nvim/lua/user
+    ~/.config/nvim/plugin:              config/nvim/plugin
+    ~/.config/nvim/templates:           config/nvim/templates
+    ~/.config/ranger:                   config/ranger
+    ~/.config/rofi:                     config/rofi
+    ~/.config/sway:                     config/sway
+    ~/.config/swaylock:                 config/swaylock
+    ~/.config/tofi:                     config/tofi
+    ~/.config/translate-shell:          config/translate-shell
+    ~/.config/user-dirs.dirs:           utils/user-dirs.dirs
+    ~/.config/waybar:                   config/waybar
+    ~/.config/wayfire.ini:              config/wayfire.ini
+    ~/.config/wlogout:                  config/wlogout
+    ~/.config/wob:                      config/wob
+    ~/.config/wofi:                     config/wofi
+    ~/.gitconfig:                       utils/.gitconfig
+    ~/.local/bin:                       local/bin
+    ~/.local/share/applications:        local/share/applications
+    ~/.mozilla/firefox/profile/chrome:  mozilla/profile/chrome
     ~/.mozilla/firefox/profile/user.js: mozilla/profile/user.js
-    ~/.local/share/applications: config/applications
+    ~/.tmux.conf.local:                 utils/.tmux.conf.local
+    ~/.tmux.conf:                       utils/.tmux.conf
+    ~/.tokyonight.tmux:                 utils/.tokyonight.tmux
 
 - shell:
     - [git submodule update --init --recursive, Installing submodules]
