feat(kitty): add catppuccin theme for kitty;
Signed-off-by: iFlygo <iflygo@outlook.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -9,3 +9,6 @@
 	path = mozilla/profile/chrome
 	url = https://github.com/black7375/Firefox-UI-Fix.git
 	branch = proton-style
+[submodule "submodules/kitty"]
+	path = submodules/kitty
+	url = git@github.com:catppuccin/kitty.git
