chore(kitty): set catppuccin for kitty;
Signed-off-by: iFlygo <iflygo@outlook.com>

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -50,6 +50,7 @@
     ~/.tmux.conf.local:                 utils/.tmux.conf.local
     ~/.tmux.conf:                       utils/.tmux.conf
     ~/.tokyonight.tmux:                 utils/.tokyonight.tmux
+    ~/.config/kitty/themes:             submodules/kitty/themes
 
 - shell:
     - [git submodule update --init --recursive, Installing submodules]
