chore(mpv): add uosc for mpv;
Signed-off-by: iFlygo <iflygo@outlook.com>

--- a/config/mpv/mpv.conf
+++ b/config/mpv/mpv.conf
@@ -26,6 +26,10 @@ osd-bold              = yes
 osd-font-size         = 14
 # osd-font = 'monospace'
 
+# ===== Seeking =====
+
+save-position-on-quit=yes               # saves the seekbar position on exit
+
 # ===== RAM =====
 
 cache                  = yes                               # uses a large seekable RAM cache even for local input.
