chore(kitty): fix kitty bar;
Signed-off-by: iFlygo <iflygo@outlook.com>

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,3 +1,5 @@
+include current-theme.conf
+
 allow_remote_control yes
 listen_on            unix:@kitty
 
@@ -16,12 +18,13 @@ strip_trailing_spaces   always
 shell_integration       no-rc
 cursor_shape            beam
 
+term xterm-256color
+
 tab_bar_min_tabs            2
-tab_bar_edge                bottom
+tab_bar_edge                top
 tab_bar_style               powerline
 tab_powerline_style         slanted
 tab_title_template          {title}{' :{}:'.format(num_windows) if num_windows > 1 else ''}
 
-include current-theme.conf
 
-# vim:ft=conf
+# vim:ft=kitty
