chore(mpv): add some usefull scripts;
Signed-off-by: iFlygo <iflygo@outlook.com>

--- a/config/mpv/script-opts/ytdl_hook.conf
+++ b/config/mpv/script-opts/ytdl_hook.conf
@@ -9,7 +9,7 @@ try_ytdl_first=yes
 exclude="%.avi$|%.flac$|%.flv$|%.mp3$|%.m3u$|%.m3u8$|%.m4a$|%.m4v$|%.mkv$|%.mp4$|%.ts$|%.VOB$|%.wav$|%.webm$|%.wmv$"
 
 ##https://mpv.io/manual/master/#options-all-formats
-all_formats=no
+all_formats=yes
 force_all_formats=yes
 
 ##允许切换源的轨道（出于性能原因默认禁用）
