chore(mpv): support vulkan;
Signed-off-by: iFlygo <iflygo@outlook.com>

--- a/config/mpv/mpv.conf
+++ b/config/mpv/mpv.conf
@@ -10,12 +10,19 @@ term-osd-bar            = yes # displays a progress bar on the terminal
 
 # ===== Video =====
 
-autofit-larger = 75%x75%
-hwdec-codecs   = all
-hwdec          = vaapi
 profile        = gpu-hq
+autofit-larger = 75%
+hwdec-codecs   = all
+# enable vulkan->see more: https://github.com/mpv-player/mpv/issues/11739
+# vulkan need mpv 0.36+
+hwdec          = vulkan-copy,vaapi-copy  # <vaapi|vulkan>
+gpu-api        = vulkan
+gpu-context    = waylandvk
 vo             = gpu-next # <gpu|gpu-next|dmabuf-wayland(pipewire backend)>
-
+vf             = format:dolbyvision=yes
+cscale         = bilinear          # 色度还原算法；可由更好的 "KrigBilateral.glsl" 着色器取代。默认 bilinear
+scale          = bilinear          # 放大算法，默认值同上
+dscale         = # 缩小算法。若不设定，则自动采用 --scale 的值
 
 # ===== OSD =====
 
@@ -24,7 +31,6 @@ border                = no
 osd-bar               = no
 osd-bold              = yes
 osd-font-size         = 14
-# osd-font = 'monospace'
 
 # ===== Seeking =====
 
@@ -39,12 +45,19 @@ demuxer-max-bytes      = 1024M                   # sets fast seeking
 
 # ===== Audio =====
 
-volume-max = 100                          # maximum volume in %, everything above 100 results in amplification
-volume     = 70                               # default volume, 100 = unchanged
+volume-max             = 100                          # maximum volume in %, everything above 100 results in amplification
+volume                 = 70                               # default volume, 100 = unchanged
+audio-pitch-correction = yes       # 变速播放时的音调修正，默认 yes
 
 # ===== Subtitles =====
 
 sub-scale-with-window = yes
+
+# ===== Shaders =====
+
+#初始加载多个着色器的示例写法
+glsl-shaders         = "~~/shaders/KrigBilateral.glsl"
+gpu-shader-cache-dir = "~~/.cache/shader"
 
 # ===== Others =====
 
@@ -57,5 +70,4 @@ load-scripts       = yes       # 自动挂载 /scripts/ 目录中的所有外置
 # ===== Scripts =====
 
 ytdl               = yes  # 网址解析增强，默认 yes
-ytdl-raw-options   = yes-playlist=
 script-opts        = ytdl_hook-ytdl_path=yt-dlp
