chore(font): fix typo;
Signed-off-by: iFlygo <iflygo@outlook.com>

--- a/config/fontconfig/conf.d/03-bind.conf
+++ b/config/fontconfig/conf.d/03-bind.conf
@@ -13,10 +13,10 @@
 
 <match target="pattern">
     <test name="family">
-      <string>Microsoft Yahei</string>
+      <string>Microsoft YaHei</string>
     </test>
     <edit binding="strong" mode="prepend" name="family">
-      <string>sans-serif</string>
+      <string>Noto Sans</string>
     </edit>
 </match>
 
